JAVA-2523: Remove use of methods deprecated in Java 9